--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 TODO :
 - Fix the problem with wxWidgets 2.9
 - Add a visible warning if the wrong firmware is loaded on the Arduino
-- Fix the protocol conflict which prevent the loading of the EEPROM the first time the user ask for it
-- Add the windows of the addPinFrame in a grid and use ID and no more global variable
+- Fix the protocol conflict which prevent the loading of the EEPROM the first time the user ask for it (it seems to be a problem with the command END_SYSEX which is not received )
+- Add the windows of the addPinFrame in a grid ?
 - Manage the reset button of the Arduino (Loading from the Arduino ? Just reinitialize some variables ? ... )
-- Suggest to save the configuration on quit
 - Disable the pins in the Firmware when a signal is deleted
+- Make it possible to launch webmapper since the firmata_mapper GUI interface
